# toot-3d

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
bindgen/: citro2d.h  mbedtls.h  toot3d.c
src/: main.rs
src/net/: client.rs  curl.rs  mbedtls.rs  mod.rs  retriever.rs
src/types/: mod.rs
src/ui/: citro2d.rs  image.rs  kbd.rs  mod.rs  text.rs
src/ui/screen/: error.rs  mod.rs  qr.rs  timeline.rs
