[package]
name = "toot-3d"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0.79"
bindgen = "0.64.0"

[dependencies]
bit-set = "0.5.3"
chrono = { version = "0.4.24", default-features = false, features = ["alloc", "serde", "std"] }
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
image = { version = "0.24.5", default-features = false, features = ["png", "gif", "jpeg", "webp"] }
libc = "0.2.140"
lru = "0.10.0"
qrcode = { version = "0.12.0", default-features = false }
quick-xml = "0.28.0"
serde = { version = "1.0.155", features = ["alloc", "derive"] }
serde_json = "1.0.94"
unicode-linebreak = "0.1.4"
url = "2.3.1"

[build]
target = "armv6k-nintendo-3ds"

[profile.release]
opt-level = "z"
